Modals: Apply image overflow fix to all modal content, not just help

--- a/css/main.css
+++ b/css/main.css
@@ -550,7 +550,3 @@ input:checked + .slider:before {
   height: 35px;
   width: 35px;
 }
-
-#helpcontent img {
-  max-width: 100%;
-}
